@@ -1,4 +1,5 @@
 current:
+  * add support for GraphicsMagick as ImageMagick alternative
   * mention xmlto in HACKING (patch #3297039)
     - thanks to jarekczek for the patch!
   * disable addons by default until synchronization with main symbol is working
